--- a/stories.html
+++ b/stories.html
@@ -127,19 +127,11 @@
 									<div class="mu-about-right">
 										<h2>Dina - Romania</h2>
 
-<<<<<<< HEAD
-										<p>Dina came to New York from Romania when she was only 11 years old. Things were pretty bad in Romania during that time, it was a communist country under Russian rule. The environment was very scary for a child, the military and spies were everywhere, and it was extremely hard to leave the country. Dina's parents tried to leave for more than 10 years and unfortunately her father never made it. </p>
-                    <p>Coming here Dina tried to make the best out of it, in school she quickly learned English and got new friends. It was easier for her than for others, "I think it is a matter of personality, I'm an adjuster”, she recalls, “To be honest I didn't miss Romania that much, my only struggle was grades. I was used to being the best of my class, and here I had a harder time" The one thing that stayed the same here was food, Dina's mom, as many other immigrants do, kept the same recipes they were used to eat back in Romania, this helped them feel more at home and preserve their culture. Also, here they could be openly Jewish, which was a huge relief for both.</p>
-                    <p>As a young adult Dine travelled back to Romania for a visit. Things were better now and she was able to visit her father's grave. But one of her biggest discoveries about herself, she realized here everyone looked like her, she had never felt different in America but now she also felt Romanian. Nowadays, Dina works as a teacher in NYU in Silver School of Social Work, and focuses on adoption and communities. </p>
-
-
-=======
 										<p>Dina came to New York from Romania when she was only 11 years old. Things were pretty bad in Romania during that time, it was a communist country under Russian rule. The environment was very scary for a child, the military and spies were everywhere, and it was extremely hard to leave the country. Dina's parents tried to leave for more than 10 years and unfortunately her father never made it.</p>
 
                       <p>Coming here Dina tried to make the best out of it, in school she quickly learned English and got new friends. It was easier for her than for others, "I think it is a matter of personality, I'm an adjuster”, she recalls, “To be honest I didn't miss Romania that much, my only struggle was grades. I was used to being the best of my class, and here I had a harder time" The one thing that stayed the same here was food, Dina's mom, as many other immigrants do, kept the same recipes they were used to eat back in Romania, this helped them feel more at home and preserve their culture. Also, here they could be openly Jewish, which was a huge relief for both.</p>
 
                       <p>As a young adult Dine travelled back to Romania for a visit. Things were better now and she was able to visit her father's grave. But one of her biggest discoveries about herself, she realized here everyone looked like her, she had never felt different in America but now she also felt Romanian. Nowadays, Dina works as a teacher in NYU in Silver School of Social Work, and focuses on adoption and communities. </p>
->>>>>>> 89d78b0813b6033e932ebc64a468fc91e9b449f8
 									</div>
 								</div>
 							</div>
@@ -184,15 +176,9 @@
 
     										<p>Kal was born in a big city in Ethiopia, but only lived there until she was four years old. Her father was member of the opposing party and had to fled to avoid persecution. He traveled here first and Kal and her mom followed. Moving here was really hard for her family, going to a primarily white elementary school, she realized for the first time she was black. Back in Ethiopia that had never been an issue, but here, at the age of 7, she realized that being black meant being different. Also communities were much tighter in Ethiopia, families live together in compounds, here it felt really weird for her living in an apartment.</p>
 
-<<<<<<< HEAD
-    										<p>As years went by she adapted, made friends and started college, but that when she decided she wanted to go back to Ethiopia. "I went back to Ethiopia a couple of years ago, I felt like I needed to go home. I spent time with my family and went to a monastery"</p>
-
-    										<p>Kal soon returned to New York and is now in her Sophomore year in NYU. She has been able to create a dual identity and combines both cultures to make them her own. As immigrants this is usually complex, especially when both cultures are so different. "I feel my values are more Ethiopian, but my behaviors are more American"</p>
-=======
     										<p>As years went by she adapted, made friends and started college, but that when she decided she wanted to go back to Ethiopia. "I went back to Ethiopia a couple of years ago, I felt like I needed to go home. I spent time with my family and went to a monastery”.</p>
 
     										<p>Kal soon returned to New York and is now in her Sophomore year in NYU. She has been able to create a dual identity and combines both cultures to make them her own. As immigrants this is usually complex, especially when both cultures are so different. "I feel my values are more Ethiopian, but my behaviors are more American".</p>
->>>>>>> 89d78b0813b6033e932ebc64a468fc91e9b449f8
     									</div>
     								</div>
     							</div>
@@ -238,20 +224,12 @@
         										<p>Delia is a sophomore in high school, but has lived a life quite different from her classmates. She was born in Guatemala, the second of 6 children, in a rural and poor neighborhood. Her older brother left home when she was young, but when she turned 16 she decided she wanted to go and live with him here in New York. It was hard con convince her parents, and even harder to get the money for the trip but she was determined to get a better education and help her family, especially her younger sisters. Visas are almost impossible to get in Guatemala so she had to travel by land to Mexico and cross the border through the desert. The journey was terrible,</p>
 
         										<p>"The worst part was once we were in the U.S, the desert was so hot, we had no food or water left and I was so afraid someone would find us" </p>
-<<<<<<< HEAD
-=======
 
         										<p>Someone ment either the US migratory policy or the illegal gangs that travel the desert in look of illegal crossers. She find some friends along the way, other girls traveling alone, and they would take turns watching over while the other slept. She saw terrible thing in the way, children younger than her completly alone, dead bodies and dangerous animals. </p>
->>>>>>> 89d78b0813b6033e932ebc64a468fc91e9b449f8
 
-        										<p>Someone meant either the US migratory policy or the illegal gangs that travel the desert in look of illegal crossers. She found some friends along the way, other girls traveling alone, and they would take turns watching over while they slept. She saw terrible things in the way, children younger than her completely alone, dead bodies and dangerous animals.</p>
                             <p>"I cried every night, most of the people I was traveling with did it. We just wanted someone to find us, we didn't care anymore" </p>
 
-<<<<<<< HEAD
-                            <p>They were finally taken by the migratory police, sadly this led to a cold cell, a torture usually use in CIA interrogations, but which has been known to be use with illegal immigrants in the Mexico border. She was kept there for the night, and then when they realized she was underage she was transported to Washington. She lived in a detention facility, but was allowed to go to school and finally talk to her brother. After some weeks both of them reunited in New York and she started going to high school. The changes have been hard for her, her English is improving but she still needs to balance school and work, to help pay back her father for the trip. </p>
-=======
                             <p>They were finally taken by the migratory police, sadly this led to a cold cell, a torture usually used in CIA interrogations, but which has been known to be use with illegal immigrants in the Mexico border. She was kept there for the night, and then when they realized she was underage she was transported to Washington. She lived in a detention facility, but was allowed to go to school and finally talk to her brother. After some weeks both of them reunited in New York and she started going to high school. The changes have been hard for her, her English is improving but she still needs to balance school and work, to help pay back her father for the trip. </p>
->>>>>>> 89d78b0813b6033e932ebc64a468fc91e9b449f8
 
                             <p>Looking at Delia, now 1 year later, you would never imagine what she has been through. She is a happy and brave girl, with friends and a huge strength to go on. She risked it all to be here and now plans to make the best out of it.</p>
         									</div>
@@ -289,7 +267,7 @@
             							<div class="row">
             								<div class="col-md-6">
             									<div class="mu-about-left">
-            										<img class="" src="assets/images/stories4.jpg" alt="Men Speaker">
+            										<img class="" src="assets/images/speaker4.jpg" alt="Men Speaker">
             									</div>
             								</div>
             								<div class="col-md-6">
